[package]
name = "levenshtein-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
levenshtein = "1.0.5"
levenshtein_automata = "0.2.1"
edit-distance = "2.1.0"
levenshtein-diff = "0.2.4"
strsim = "0.10.0"
